--- a/src/content/hero/Hero.mdx
+++ b/src/content/hero/Hero.mdx
@@ -1,14 +1,12 @@
 ---
-hero_heading: Hi
+hero_heading_one: Hi
 hero_secondary_heading: there
-hero_paragraph: beautiful
-heading: Hi
-secondary_heading: and Welcome
-hero_content: I'm baby palo santo snackwave affogato put a bird on it post-ironic
+hero_content:
+  I'm baby palo santo snackwave affogato put a bird on it post-ironic
   intelligentsia tofu fanny pack master cleanse church-key. Direct trade artisan pop-up
   cred VHS kinfolk austin twee squid tacos subway tile prism food truck man bun vibecession.
-paragraph: I'm baby palo santo snackwave affogato put a bird on it post-ironic intelligentsia
+hero_paragraph:
+  I'm baby palo santo snackwave affogato put a bird on it post-ironic intelligentsia
   tofu fanny pack master cleanse church-key. Direct trade artisan pop-up cred VHS
   kinfolk austin twee squid tacos subway tile prism food truck man bun vibecession.
-
 ---
