--- a/src/content/services/services.mdx
+++ b/src/content/services/services.mdx
@@ -1,17 +1,11 @@
 ---
 services_title: What we do
-services_paragraph: "I'm baby palo santo snackwave affogato put a bird on it post-ironic
+services_paragraph:
+  "I'm baby palo santo snackwave affogato put a bird on it post-ironic
   intelligentsia tofu fanny pack master cleanse church-key. \n\n"
 serviceslist_heading: Specialities
 services_list:
-- Data Engineers
-- Data Scientists
-- Machine Learning Engineers
-- Data Analysts
-- Data Architects
-- Business Intelligence Developers
-- Visualizers
-- Reporting Specialists
-- Story Tellers
-
+  - one
+  - two
+  - three
 ---
