--- a/src/content/about/about.mdx
+++ b/src/content/about/about.mdx
@@ -1,8 +1,6 @@
 ---
 about_title: Title
-about_paragraph_two: hkjhjh
-about_paragraph: "I'm baby palo santo snackwave affogato put a bird on it post-ironic
-  intelligentsia tofu fanny pack master cleanse church-key. Direct trade artisan pop-up
-  cred VHS kinfolk austin twee squid tacos subway tile prism fo.\n\n"
-
+about_paragraph:
+  "I'm baby palo santo snackwave affogato put a bird on it post-ironic
+  intelligentsia tofu fanny pack master cleanse church-key. Direct trade artisan pop-up cred VHS kinfolk austin twee squid tacos subway tile prism fo.\n\n"
 ---
